Changed buttons for cards

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,34 +10,112 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
   </head>
   <body>
-    <div class="container-md text-md-center px-md-5">
+    <div class="container-md text-md-center ">
         <div class="row py-md-3">
             <div class="col-md">
-                <button type="button" class="btn btn-outline-dark btn-lg px-md-5 stretch-button-95">Dungeon</button>
+                <div class="card border-dark">
+                    <div class="card-header">
+                        Dungeon
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                          </ul>
+                    </div>
+                </div>
+                <!-- <button type="button" class="btn btn-outline-dark btn-lg px-md-5 stretch-button-95">Dungeon</button> -->
             </div>
             <div class="col-md">
-                <button type="button" class="btn btn-outline-dark btn-lg px-md-5 stretch-button-95">Encounter</button>
+                <div class="card border-dark">
+                    <div class="card-header">
+                        Encounter
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                          </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row py-md-3">
             <div class="col-md">
-                <button type="button" class="btn btn-outline-dark btn-lg px-md-5 stretch-button-95">Items</button>
+                <div class="card border-dark">
+                    <div class="card-header">
+                        Items
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                          </ul>
+                    </div>
+                </div>
             </div>
             <div class="col-md">
-                <button type="button" class="btn btn-outline-dark btn-lg px-5 stretch-button-95">Quests</button>
+                <div class="card border-dark">
+                    <div class="card-header">
+                        Quests
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                          </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row py-md-3">
             <div class="col-md">
-                <button type="button" class="btn btn-outline-dark btn-lg px-md-5 stretch-button-95">NPCs</button>
+                <div class="card border-dark">
+                    <div class="card-header">
+                        NPC's
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                          </ul>
+                    </div>
+                </div>
             </div>
             <div class="col-md">
-                <button type="button" class="btn btn-outline-dark btn-lg px-md-5 stretch-button-95">Town</button>
+                <div class="card border-dark">
+                    <div class="card-header">
+                        Town
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                          </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row py-md-3">
             <div class="col-md">
-                <button type="button" class="btn btn-outline-dark btn-lg px-md-5 stretch-button-full">Misc</button>
+                <div class="card border-dark ">
+                    <div class="card-header">
+                        Misc
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                          </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
