--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,12 @@
                     </div>
                     <div class="card-body">
                         <ul class="list-group list-group-flush">
-                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark" id="puzzleTest">Puzzles</button>
                             <button type="button" class="btn btn-outline-dark">Empty</button>
                             <button type="button" class="btn btn-outline-dark">Empty</button>
                           </ul>
                     </div>
                 </div>
-                <!-- <button type="button" class="btn btn-outline-dark btn-lg px-md-5 stretch-button-95">Dungeon</button> -->
             </div>
             <div class="col-md">
                 <div class="card border-dark">
@@ -119,71 +118,41 @@
             </div>
         </div>
     </div>
-    <!-- <p>
-        All<br>
-        |__Dungeon<br>
-            |__Puzzles<br>
-            |__Hidden Doors<br>
-            |__Deadly Traps<br>
-            |__Cavern Curiosities<br>
-            |__Riddles<br>
-            |__Treasure Defenses<br>
-            |__Tricky Traps<br>
-        |__Encounter<br>
-            |__Aerial Encounter
-            |__Beach Encounter
-            |__Desert Encounter
-            |__Forest Encounter
-            |__Jungle Encounter
-            |__Nordic/Viking Encounter
-            |__Scary Forest Encounter
-            |__Tavern Encounter
-        |__Items<br>
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-        |__Misc<br>
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-        |__NPCs<br>
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-        |__Quests<br>
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-        |__Town<br>
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-            |__
-    </p> -->
+
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <strong class="me-auto">Random Result</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body">
+            <p id="toast-response" onload="testFunc()"></p>
+          </div>
+        </div>
+      </div>
+
+      
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="{{url_for('static', filename='scripts/toasts.js')}}"></script>
+    <script>
+        function testFunc(){
+
+        // var entryResponse;
+        // const toastResponse = document.getElementById('toast-response')
+        // console.log(toastResponse)
+
+        // fetch('http://127.0.0.1:5000/r/Dungeon?arg=Puzzles')
+        //     .then(res => res.json())
+        //     .then(data => {
+        //         entryResponse = data
+        //         console.log(data)
+        //     })
+        //     .then(() =>{
+        //         console.log(entryResponse)
+        //         toastResponse.innerText = 'entryResponse'
+        //     })
+        console.log("test");
+        }
+      </script>
   </body>
 </html>
