--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="toast-body">
-            <p id="toast-response" onload="testFunc()"></p>
+            <p id="toast-response"></p>
           </div>
         </div>
       </div>
@@ -134,25 +134,5 @@
       
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{{url_for('static', filename='scripts/toasts.js')}}"></script>
-    <script>
-        function testFunc(){
-
-        // var entryResponse;
-        // const toastResponse = document.getElementById('toast-response')
-        // console.log(toastResponse)
-
-        // fetch('http://127.0.0.1:5000/r/Dungeon?arg=Puzzles')
-        //     .then(res => res.json())
-        //     .then(data => {
-        //         entryResponse = data
-        //         console.log(data)
-        //     })
-        //     .then(() =>{
-        //         console.log(entryResponse)
-        //         toastResponse.innerText = 'entryResponse'
-        //     })
-        console.log("test");
-        }
-      </script>
   </body>
 </html>
