--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
                             <button type="button" class="btn btn-outline-dark" id="puzzleTest">Puzzles</button>
                             <button type="button" class="btn btn-outline-dark">Empty</button>
                             <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <button type="button" class="btn btn-outline-dark">Empty</button>
                           </ul>
                     </div>
                 </div>
