--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                             <button type="button" class="btn btn-outline-dark" id="puzzleTest">Puzzles</button>
                             <button type="button" class="btn btn-outline-dark">Empty</button>
                             <button type="button" class="btn btn-outline-dark">Empty</button>
-                            <button type="button" class="btn btn-outline-dark">Empty</button>
+                            <script src="{{url_for('static', filename='scripts/generatebutton.js')}}"></script>
                           </ul>
                     </div>
                 </div>
@@ -135,5 +135,6 @@
       
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="{{url_for('static', filename='scripts/toasts.js')}}"></script>
+    
   </body>
 </html>
