--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
   </head>
   <body>
-    <script src="{{url_for('static', filename='scripts/generatebutton.js')}}"></script>
+    
     <!-- <div class="container-md text-md-center ">
         <div class="row py-md-3">
             <div class="col-md">
@@ -134,7 +134,9 @@
 
       
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="{{url_for('static', filename='scripts/toasts.js')}}"></script>
+    <script src="{{url_for('static', filename='scripts/generatebutton.js')}}"></script>
+    <!-- <script src="{{url_for('static', filename='scripts/toasts.js')}}"></script> -->
+
     
   </body>
 </html>
